definindo estilo do game

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     
+    <h1>Digital Innovation One : <strong>Snack Game</strong></h1>
+     <h4>Lucas Fernandes Ramos</h4>
     <canvas id="snack" width="512" height="512"> 
  
     </canvas>
